2010-06-18 Homer Xing <homer.xing@gmail.com>

    * Add youtube-dl, download youtube video software, in "Applications->File sharing" category
    * Add unetbootin, create bootable USB flash disk, in "Applications->Other" category

2010-06-17 Homer Xing <homer.xing@gmail.com>

    * Change login window background.

2010-06-16 Homer Xing <homer.xing@gmail.com>

    * Synchronize latest application data from web
    * Automatically check new version
    * Fix bug: bad file descriptor

2010-06-15 QI Chengjie <starboy.qi@gmail.com>

    * Add Adobe AIR

2010-06-15 Homer Xing <homer.xing@gmail.com>

    * Improve processing for AccessDeniedError
    * Show a horizontal separator on main-view
    * Hide 49-sansserif cure
    * Improve icons fetch
    * Support online synchronization
    * Detect policykit
    * Improve server list for Ubuntu and Fedora
    * Improve MTJ server list
    * Detect Poland software as the same way as Chinese software
    * Add GMarks
    * Improve software center pane

2010-06-13 MA Yue <velly.empire@gmail.com>

    * Complete all Firefox tweaks

2010-06-12 Devil Wang <wxjeacen@gmail.com>
    
    * Add DOSBox to software pane

2010-06-11 Ray Chen <chenrano2002@gmail.com>

    * Do not raise Exception if proxy string is empty

2010-06-10 Ray Chen <chenrano2002@gmail.com>

    * Always download latest Firefox extensions

2010-06-08 Homer Xing <homer.xing@gmail.com>

    * Improve RPM backend efficiency

2010-06-07 Homer Xing <homer.xing@gmail.com>

    * Fix bug: newline appears in menuitems of default pane
    * Pretty changelog rendering
    * Hide empty category

2010-06-05 Homer Xing <homer.xing@gmail.com>

    * Add software items for Archlinux

2010-06-05 SHANG Yuanchun <idealities@gmail.com>

    * Add support for installing software on Archlinux
    * Fix bugs in class PACMAN

2010-06-04 Homer Xing <homer.xing@gmail.com>

    * Improve architecture. Do not need to manually update AILURUS_VERSION.