@@ -2,6 +2,7 @@
 
     * Add youtube-dl, download youtube video software, in "Applications->File sharing" category
     * Add unetbootin, create bootable USB flash disk, in "Applications->Other" category
+    * Add remastersys, backup your system to live cd, in "Applications->Other" category
 
 2010-06-17 Homer Xing <homer.xing@gmail.com>
 
